# px4-offboard-mission

./: .gitignore
src/common/msgs/: CMakeLists.txt  package.xml
src/offb/: CMakeLists.txt  package.xml
src/offb/include/: csi_camera.h  math_utils.h  offboard_control.h  state_from_mavros.h
src/offb/include/simd/: neon.h  sse.h
src/offb/launch/: remote_uav.launch
src/offb/src/: com.cpp  send_info.cpp  set_mode.cpp  test.cpp  vision.cpp
src/offboard_control/offb/: CMakeLists.txt
src/offboard_control/offb/include/: csi_camera.h  math_utils.h  offboard_control.h  simd.h  state_from_mavros.h
src/offboard_control/offb/launch/: remote_station.launch  remote_uav.launch
src/offboard_control/offb/src/: com.cpp  mode_control.cpp  monitor.cpp  send_info.cpp  servo_control.cpp  state_monitor.cpp  uav.cpp  vision.cpp
src/offboard_control/offb/src/station/: fly_control.cpp  mode_control.cpp  monitor.cpp  servo_control.cpp  watchdog.cpp
src/offboard_control/offb/src/uav/: detect_ring.cpp  servo.cpp  servo_control.cpp  vision.cpp
src/offboard_control/offb_msgs/: CMakeLists.txt
src/offboard_control/offb_msgs/msgs/: AttitudeReference.msg  DroneState.msg
src/offboard_control/offb_msgs/srv/: DetectRing.srv
